# genMol

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/backbone/: egnn_base.yaml  egnn_small.yaml  pocket_egnn_base.yaml
configs/callbacks/: default.yaml  full_eval.yaml  smoke.yaml
configs/data/: crossdocked.yaml  debug_qm9_100.yaml  plinder.yaml  qm9.yaml
configs/experiment/: crossdocked_edm.yaml  crossdocked_flow.yaml  plinder_flow.yaml  qm9_edm.yaml  qm9_flow.yaml  smoke.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: edm_qm9.yaml  edm_sbdd.yaml  flow_qm9.yaml  flow_sbdd.yaml
configs/oracle/: boltz.yaml  posebusters.yaml  rdkit.yaml  vina_unidock2.yaml
configs/process/: edm_cosine.yaml  edm_polynomial.yaml  fm_linear.yaml  fm_vp.yaml
configs/sampler/: diffusion_default.yaml  flow_euler.yaml
configs/trainer/: ddp.yaml  default.yaml  smoke.yaml
docs/: ARCHITECTURE.md  DATA.md  ORACLES.md  PHASE1_SPEC.md  PHASE2_SEAMS.md
docs/adr/: 0001-process-backbone-separation.md  0002-subprocess-oracles.md  0003-vendor-vs-pip.md  0004-hydra-experiment-composition.md  (+1 more)
genmol/: __init__.py
journal/: 2026-05-20-decoder-bug-fix.md  2026-05-20-m1-m2-fix-errors.md  2026-05-20-vp-path-add.md
scripts/: build_train_smiles.py  evaluate.py  nightly_boltz.py  prepare_crossdocked.py  prepare_plinder.py  prepare_qm9.py  rl_train.py  run_benchmark.py  sample.py  train.py
tests/: conftest.py
tools/: vendor_egnn.sh
(+108 files in other folders)
